<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:background="@color/black"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTab"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_active_tab_bg"
        android:gravity="center"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/registerTab"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTitle" />

    <TextView
        android:id="@+id/registerTab"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginStart="13dp"
        android:background="@drawable/login_deactive_tab_bg"
        android:gravity="center"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@id/loginTab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/loginTab" />

    <EditText
        android:id="@+id/accountName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_deactive_tab_bg"
        android:hint="@string/login_name"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:paddingStart="52dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTab"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        app:layout_constraintBottom_toBottomOf="@id/accountName"
        app:layout_constraintStart_toStartOf="@id/accountName"
        app:layout_constraintTop_toTopOf="@id/accountName"
        app:srcCompat="@drawable/icon_acc_login" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_deactive_tab_bg"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="52dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountName"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        app:layout_constraintBottom_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toTopOf="@id/password"
        app:srcCompat="@drawable/icon_password" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_deactive_tab_bg"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="52dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        tools:ignore="RtlSymmetry"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loginGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="rememberPasswordCheckBox,
             forgetPasswordText, loginButton" />

    <CheckBox
        android:id="@+id/rememberPasswordCheckBox"
        style="@style/LoginCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:text="@string/remember_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword" />

    <TextView
        android:id="@+id/forgetPasswordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:includeFontPadding="false"
        android:text="@string/forget_password"
        android:textColor="@color/orange"
        app:layout_constraintBaseline_toBaselineOf="@id/rememberPasswordCheckBox"
        app:layout_constraintStart_toEndOf="@id/rememberPasswordCheckBox" />


    <TextView
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_button_bg"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rememberPasswordCheckBox" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/registerGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="registerButton, registerTerm, confirmPassword"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/login_button_bg"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/registerTerm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerTerm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/register_term"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>