<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/black">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_back" />

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/backButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/backButton" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/seatLayout"
            android:layout_width="0dp"
            android:layout_height="330dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/seat_bg"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/screenImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@id/screenText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/icon_screen" />

            <TextView
                android:id="@+id/selectingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:text="@string/selecting"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/seat_selecting"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/unavailableText"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/unavailableText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:text="@string/booked"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/seat_book"
                app:layout_constraintBaseline_toBaselineOf="@id/selectingText"
                app:layout_constraintEnd_toStartOf="@id/availableText"
                app:layout_constraintStart_toEndOf="@id/selectingText" />

            <TextView
                android:id="@+id/availableText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:text="@string/empty"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/seat_empty"
                app:layout_constraintBaseline_toBaselineOf="@id/selectingText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/unavailableText" />

            <TextView
                android:id="@+id/screenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/screen"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/selectingText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/seatList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/screenImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:spanCount="8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/seatTimeLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/seat_time_bg"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seatLayout">

            <TextView
                android:id="@+id/pickDateText"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_date"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/pickLayout1"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/pick_time_active_bg"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/pickLayout2"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pickDateText">

                <TextView
                    android:id="@+id/month1"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="May" />

                <TextView
                    android:id="@+id/day1"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:text="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pickLayout2"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/pick_time_deactive_bg"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/pickLayout3"
                app:layout_constraintStart_toEndOf="@id/pickLayout1"
                app:layout_constraintTop_toBottomOf="@+id/pickDateText">

                <TextView
                    android:id="@+id/month2"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="May" />

                <TextView
                    android:id="@+id/day2"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:text="2" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pickLayout3"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/pick_time_deactive_bg"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/pickLayout4"
                app:layout_constraintStart_toEndOf="@id/pickLayout2"
                app:layout_constraintTop_toBottomOf="@+id/pickDateText">

                <TextView
                    android:id="@+id/month3"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="May" />

                <TextView
                    android:id="@+id/day3"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:text="3" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pickLayout4"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/pick_time_deactive_bg"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/pickLayout5"
                app:layout_constraintStart_toEndOf="@id/pickLayout3"
                app:layout_constraintTop_toBottomOf="@+id/pickDateText">

                <TextView
                    android:id="@+id/month4"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="May" />

                <TextView
                    android:id="@+id/day4"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:text="4" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pickLayout5"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/pick_time_deactive_bg"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/pickLayout4"
                app:layout_constraintTop_toBottomOf="@+id/pickDateText">

                <TextView
                    android:id="@+id/month5"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="May" />

                <TextView
                    android:id="@+id/day5"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:text="5" />
            </LinearLayout>

            <TextView
                android:id="@+id/pickTimeText"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pick_time"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pickLayout1" />

            <TextView
                android:id="@+id/time1"
                android:layout_width="68dp"
                android:layout_height="27dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/pick_time_active_bg"
                android:gravity="center"
                android:text="@string/time1"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/time2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pickTimeText" />

            <TextView
                android:id="@+id/time2"
                android:layout_width="68dp"
                android:layout_height="27dp"
                android:background="@drawable/pick_time_deactive_bg"
                android:gravity="center"
                android:text="@string/time2"
                android:textColor="@color/white"
                app:layout_constraintBaseline_toBaselineOf="@id/time1"
                app:layout_constraintEnd_toStartOf="@id/time3"
                app:layout_constraintStart_toEndOf="@id/time1" />

            <TextView
                android:id="@+id/time3"
                android:layout_width="68dp"
                android:layout_height="27dp"
                android:background="@drawable/pick_time_deactive_bg"
                android:gravity="center"
                android:text="@string/time3"
                android:textColor="@color/white"
                app:layout_constraintBaseline_toBaselineOf="@id/time1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/time2" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/checkoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/check_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/statusLoadingWheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>